Show (and center) the alert icon on very narrow tabs.

Tabs now fall back to showing the alert icon, if one is present, instead
 of the favicon when tabs are too narrow to fit any of their children.

Bug: 883681
Change-Id: Ic7addc382b114cb75c59fdcffae912caf86a6f3c
Reviewed-on: https://chromium-review.googlesource.com/c/1270180
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597779}
Former-commit-id: 84909ff6ee8c00b2fc314fbd401ed731dec9acac